--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "immutable": "^3.8.1",
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-persist": "^3.2.2"
   }
 }
