--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "anylog",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "Log anything.",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --content-base build --inline --hot --history-api-fallback",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.babel.js",
+    "start": "webpack-dev-server --inline --hot --history-api-fallback",
     "lint": "eslint . --ext .js --ext .jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,12 +19,15 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "clean-webpack-plugin": "^0.1.9",
+    "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "eslint": "^2.11.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
