--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.1.0",
+    "react-grid-layout": "^0.12.6",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-bootstrap": "^0.23.0",
