--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-router-bootstrap": "^0.23.0",
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
-    "redux-persist": "^3.2.2"
+    "redux-persist": "^3.2.2",
+    "redux-thunk": "^2.1.0"
   }
 }
