--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,14 @@ __pycache__/
 node_modules/
 anylog/static/
 
+# config
+anylog/config/prod.cfg
+anylog/config/dev.cfg
+
 # Other
 old/
 .coverage
 htmlcov/
 anylogenv/
 *.save
+tmp/
