added verification module

--- a/anylog/config/sample.cfg
+++ b/anylog/config/sample.cfg
@@ -1,8 +1,9 @@
-#$ export ANYLOG_SETTINGS=/config/sample.cfg
+#$ export ANYLOG_SETTINGS=./config/sample.cfg
 
 # main config
 DEBUG = True;
 SECRET_KEY = 'sample key';
+ROOT_URL = 'http://localhost:3334';
 
 # database config
 DB_DRIVER = 'postgresql';
@@ -17,3 +18,7 @@ SQLALCHEMY_TRACK_MODIFICATIONS = False;
 MAILGUN_API_KEY = 'XXXXX'
 MAILGUN_BASE_URL = 'XXXXXX'
 MAIL_DEFAULT_SENDER = 'Anylog <app@anylog.xyz>'
+
+# sms settings
+PLIVO_AUTH_ID = 'XXXXXX'
+PLIVO_AUTH_TOKEN = 'XXXXXXXXX'
