--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment": "^2.13.0",
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
+    "react-bootstrap-datetimepicker": "0.0.22",
     "react-dom": "^15.1.0",
     "react-grid-layout": "^0.12.6",
     "react-redux": "^4.4.5",
