--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-bootstrap": "^0.23.0",
+    "react-waypoint": "^2.0.3",
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
     "redux-persist": "^3.2.2",
