--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-core": "^6.9.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
@@ -52,6 +53,8 @@
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
     "redux-persist": "^3.2.2",
-    "redux-thunk": "^2.1.0"
+    "redux-search": "^2.1.0",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.1"
   }
 }
