--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "chart.js": "^2.1.6",
     "moment": "^2.13.0",
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-bootstrap-datetimepicker": "0.0.22",
+    "react-chartjs": "git://github.com/venari/react-chartjs.git#chartjs-v2",
     "react-dom": "^15.1.0",
     "react-grid-layout": "^0.12.6",
     "react-redux": "^4.4.5",
